# QDAST

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup_within_klayout.py
console_script/: run.py
modeling/: decoherence.ipynb
modeling/gates/: compare_numeric.ipynb  cross_resonance.py  cross_resonance_strength.ipynb  getting_started copy 2.ipynb  getting_started copy 3.ipynb  getting_started copy.ipynb  getting_started.ipynb  hamiltonian-tomography.ipynb  qiskit_attempt.ipynb  qiskit_dynamics_cr.ipynb  qiskit_dynamics_understand.ipynb  static_zz_estimation.ipynb  understand_zz.ipynb
qdast/: __init__.py  init.lym
src/modeling/: qubit_quantization.ipynb  resonance_fit.py  simple_readout_example.ipynb
src/qdast/: defaults.py
src/simulations/: big_clockmon_capacitance_sim_flux.py  clockmon_capacitance_0_2.py  clockmon_capacitance_library_0_2_sim.py  clockmon_capacitance_library_0_3_sensing_sim.py  clockmon_capacitance_library_0_3_sim.py  clockmon_capacitance_library_3_4_5.py  clockmon_capacitance_library_sim.py  clockmon_capacitance_sim.py  clockmon_chip_sim.py  clockmon_eigenmode_ancilla_sim.py  clockmon_eigenmode_sim.py  clockmon_eigenmode_simplified_sim.py  clockmon_fluxline_sim.py  clockmon_fluxline_sim_2.py  coupled_clockmon_chip_eig_sim.py  coupled_clockmon_chip_q3d_sim.py  detection_device_2s1a_crosstalk_q3d.py  detection_s2a1_eig_feedline_sim.py  detection_s2a1_eig_resonator.py  digittee_capacitance_library_sim.py  doublepad_capacitance_sim_drive.py  doublepad_chip_eig_sim.py  doublepads_eig_feedline_sim.py  (+3 more)
(+203 files in other folders)
